form z-index bug fixed

--- a/stylecss/form.css
+++ b/stylecss/form.css
@@ -8,6 +8,7 @@
     background-color: rgba(0, 0, 0, 0.8);
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 
 .form-container{
